added port details

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <div class="dropdown-content">
                           <a href="asset/Resume2022.pdf">Resume</a>
                           <a href="./work.html">Portfolio</a>
-                          <a href="www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a>
+                          <a href="https://www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a>
                           <a href="mailto:travis@travesto.design">Email Me</a>
                         </div>
                     </div>  
@@ -50,7 +50,7 @@
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="asset/Resume2022.pdf">Resume</a></li>
                             <li><a href="./work.html">Portfolio</a></li>
-                            <li><a href="www.linkedin.com/in/travis-cook-uxmc">LinkedIn</a></li>
+                            <li><a href="https://www.linkedin.com/in/travis-cook-uxmc">LinkedIn</a></li>
                             <!-- <li><a href="https://github.com/travesto">GitHub</a></li> -->
                             <li><a href="mailto:travis@travesto.design">Email Me</a></li>
                         </ul>
@@ -66,9 +66,10 @@
                         <br><br>
                         I'm Travis, currently a Creative Designer for USAA, based in San Antonio, Texas.
                         <br><br>
-                        As a designer, I split my time between creating and facilitating Human Centered Design research with my team to create usable, beautiful experiences and coding prototypes (React/Redux, Plain 'ol HTML5, CSS, and JS, mostly). 
+                        As a designer, I engage with business stakeholders to guide strategic visioning, guide and facilitate Human Centered Design
+                        research with customers and internal stakeholders, create mockups for development team guidance using Sketch and InVision.  I also collaborate with other designers to critique and improve design work.
                         <br><br>
-                        I have a B.S. in Computer Science with emphasis in Human-Computer Interaction from Abilene Christian University. I received my Nielsen-Norman UX Master Certification in October 2020.
+                        I have a B.S. in Computer Science with emphasis in Human-Computer Interaction from Abilene Christian University. I received my Nielsen-Norman UX Master Certification in October 2020 with specialities in Interaction Design, UX Management, and UX Research.
                         <br><br>
                         When I'm not in the office, I'm exploring craft coffee, riding my bike, or practicing my <a href="https://instagram.com/travesto">photography.</a>
                         <br><br>
