--- a/work.html
+++ b/work.html
@@ -44,7 +44,7 @@
                             <a href="./index.html">Home</a>
                             <a href="asset/Resume2022.pdf">Resume</a>
                             <a href="./work.html">Portfolio</a>
-                            <a href="www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a>
+                            <a href="https://www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a>
                             <a href="mailto:travis@travesto.design">Email Me</a>
                         </div>
                     </div>  
@@ -53,7 +53,7 @@
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="asset/Resume2022.pdf">Resume</a></li>
                             <li><a href="./work.html">Portfolio</a></li>
-                            <li><a href="www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a></li>
+                            <li><a href="https://www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a></li>
                             <li><a href="mailto:travis@travesto.design">Email Me</a></li>
                         </ul>
                     </div>
@@ -69,16 +69,20 @@
                         <div class="gridItemTitle serif">Virtual Photo Estimates for Auto Repairs
                             <div>Enabling customers to create an estimate for auto repairs without needing to schedule an appointment with an adjuster.</div>
                         </div>
-                        <button class="gridButton">View Project</button>
+                        <button onclick="location.href='./photoest.html'" class="gridButton">
+                            <a href="./photoest.html">View Project</a>
+                        </button>
                     </div>
                 </div>
                 <div class="flexColumn about gridItem">   
                     <img class="gridImage" src="./asset/rm.png">
                     <div class="gridDescrip">
-                        <div class="gridItemTitle serif">Managing Repair Serices During a Claim
+                        <div class="gridItemTitle serif">Managing Repair Services During a Claim
                             <div>Rather than waiting for an adjuster to call and arrange emergency serices, we empower customers to get the services they need proactively.</div>
                         </div>
-                        <button class="gridButton">View Project</button>
+                        <button onclick="location.href='./repairmanager.html'" class="gridButton">
+                            <a href="./repairmanager.html">View Project</a>
+                        </button>
                     </div>
                 </div>
                 <div class="flexColumn about gridItem">   
@@ -89,7 +93,9 @@
                                 Help customers efficiently inventory their stolen or damaged belongings to get quickly and accurately reimbursed.
                             </div>
                         </div>
-                        <button class="gridButton">View Project</button>
+                        <button onclick="location.href='./contents.html'" class="gridButton">
+                            <a href="./contents.html">View Project</a>
+                        </button>
                     </div>
                 </div>
                 <div class="flexColumn about gridItem">   
@@ -98,7 +104,9 @@
                         <div class="gridItemTitle serif">Auto Glass Claim Visioning
                             <div>Hands-on research led to revisinsioning the auto glass claims experience.</div>
                         </div>
-                        <button class="gridButton">View Project</button>
+                        <button onclick="location.href='./glass.html'"class="gridButton">
+                            <a href="./glass.html">View Project</a>
+                        </button>
                     </div>
                 </div>
                 <div class="flexColumn about gridItem">   
@@ -107,7 +115,9 @@
                         <div class="gridItemTitle serif">Roadside Assistance
                             <div>A refreshed design to help customers understand how Roadside Assistance can help them.</div>
                         </div>
-                        <button class="gridButton">View Project</button>
+                        <button onclick="location.href='./roadside.html'"class="gridButton">
+                            <a href="./roadside.html">View Project</a>
+                        </button>
                     </div>
                 </div>
             </div>
