added port details

--- a/glass.html
+++ b/glass.html
@@ -42,18 +42,18 @@
                         <button class="dropbtn">Menu</button>
                         <div class="dropdown-content">
                             <a href="./index.html">Home</a>
-                            <a href="asset/Resume2022.pdf">Resume</a>
+                            <a href="./resume.html">Resume</a>
                             <a href="./work.html">Portfolio</a>
-                            <a href="www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a>
+                            <a href="https://www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a>
                             <a href="mailto:travis@travesto.design">Email Me</a>
                         </div>
                     </div>  
                     <div class="links">
                         <ul>
                             <li><a href="./index.html">Home</a></li>
-                            <li><a href="asset/Resume2022.pdf">Resume</a></li>
+                            <li><a href="./resume.html">Resume</a></li>
                             <li><a href="./work.html">Portfolio</a></li>
-                            <li><a href="www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a></li>
+                            <li><a href="https://www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a></li>
                             <li><a href="mailto:travis@travesto.design">Email Me</a></li>
                         </ul>
                     </div>
@@ -64,27 +64,29 @@
             </div>
             <div class="flexColumn full">
                 <div class="flexColumn about portfolio">   
-                    <img class="gridImage hero" src="./asset/i2eFull.png">
+                    <img class="gridImage hero" src="./asset/glassAlt.png">
                     <div class="portfolioTitle gridItemTitle serif">
-                        Virtual Photo Estimates for Auto Repairs
+                        Auto Glass Claims Vision Work
                         <div class="portfolioSubhead">Problem Statement
-                            <p class="portfolioText">Previously, a 3rd party solution was used to capture photos of a damaged vehicles after an accident to create a repair estimate. After using this solution for several years, our business partners were receiving a large volume of complaints about the difficulty customers were experienceing using the product.
+                            <p class="portfolioText">While most customers have a postive experience with the Glass claim experience, there was room for improvement. At the time, the vast majority of these claims were being filed via phone. My business partners tasked us with finding ways our 3rd party vendor could improve and looking at what a potential in-house solution could look like.
                             </p>
                         </div>
                         <div class="portfolioSubhead">Early Findings
-                            <p class="portfolioText">Our team conducted qualitative user testing with real customers in our Claims Lab to assess the problems with the 3rd part solution. Our primary findings found that customers had difficulty understanding what photos were required and why, how to capture the VIN on their vehicle, and understanding if they were successful in upploading their photos. <br><br> From this initial assesment, we worked to create potential solutions that were presented both to our business partners and the 3rd party vendor; however, the changes requested by our business partners were rejected by the vendor as this product was a White Label solution for many insurers. Given this, our business partners tasked me with designing an in-house solution.
+                            <p class="portfolioText">Since this product is hosted by a 3rd party, we had to be creative in our research. We partnered with our SEO and Data Analytics team to gleam any relevant data beyond what the 3rd party was willing to share. In addition with stakeholder interviews, on-site interviews at the vendor's shop, we were able to put together mental models and an experience map to represent our customers' experience when filing glass claims.
+                            <br><br>
+                            The intial research indicated most customers were apprehensive about filing due to unknown costs, unaswered questions, and scheduling problems. 
                             </p>
                         </div>
                         <div class="portfolioSubhead">Ideation and Design
-                            <p class="portfolioText">Since the nature of this project cented on understanding how customers interact with the product through the camera (and technical limitations), we actually printed physical copies of the design to have participants imagine their experience with the product. After several iterations and rounds of low-fidelity testing, final screens were created and put into production.
+                            <p class="portfolioText">Based on the research we conducted, we began looking at potential near and far term solutions. We created a bevy of concepts with accompaning illustrations to help our business partners envision a better glass claim experience.
                             </p>
                         </div>
                         <div class="portfolioSubhead">Results
-                            <p class="portfolioText">While the designed solution has only been in production a short time, our business partners have noted a marked increase in completion rate coinciding with a decrease in calls to adjusters requesting help completing the flow.
+                            <p class="portfolioText">Our business parters agreeed that despite the difficulty of covnincing the vendor to implement changes, there were many beneficial changes that could be made. Currently our business partners are waiting for development resources before moving forward with some of our proposed concepts.
                             </p>
                         </div>
                         <button class="gridButton">
-                            <a href="./photoest.html">View Design on inVision</a>
+                            <a href="./photoest.html">View Shareout on inVision</a>
                         </button>
                     </div>
                     
