--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <div class="dropdown">
                         <button class="dropbtn">Menu</button>
                         <div class="dropdown-content">
-                          <a href="asset/Resume2022.pdf">Resume</a>
+                          <a href="./resume.html">Resume</a>
                           <a href="./work.html">Portfolio</a>
                           <a href="https://www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a>
                           <a href="mailto:travis@travesto.design">Email Me</a>
@@ -48,7 +48,7 @@
                     <div class="links">
                         <ul>
                             <li><a href="./index.html">Home</a></li>
-                            <li><a href="asset/Resume2022.pdf">Resume</a></li>
+                            <li><a href="./resume.html">Resume</a></li>
                             <li><a href="./work.html">Portfolio</a></li>
                             <li><a href="https://www.linkedin.com/in/travis-cook-uxmc">LinkedIn</a></li>
                             <!-- <li><a href="https://github.com/travesto">GitHub</a></li> -->
@@ -67,7 +67,7 @@
                         I'm Travis, currently a Creative Designer for USAA, based in San Antonio, Texas.
                         <br><br>
                         As a designer, I engage with business stakeholders to guide strategic visioning, guide and facilitate Human Centered Design
-                        research with customers and internal stakeholders, create mockups for development team guidance using Sketch and InVision.  I also collaborate with other designers to critique and improve design work.
+                        research with customers and internal stakeholders, and create mockups for development team guidance using Sketch and InVision.  I also collaborate with other designers to critique and improve design work.
                         <br><br>
                         I have a B.S. in Computer Science with emphasis in Human-Computer Interaction from Abilene Christian University. I received my Nielsen-Norman UX Master Certification in October 2020 with specialities in Interaction Design, UX Management, and UX Research.
                         <br><br>
