--- a/photoest.html
+++ b/photoest.html
@@ -42,18 +42,18 @@
                         <button class="dropbtn">Menu</button>
                         <div class="dropdown-content">
                             <a href="./index.html">Home</a>
-                            <a href="asset/Resume2022.pdf">Resume</a>
+                            <a href="./resume.html">Resume</a>
                             <a href="./work.html">Portfolio</a>
-                            <a href="www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a>
+                            <a href="https://www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a>
                             <a href="mailto:travis@travesto.design">Email Me</a>
                         </div>
                     </div>  
                     <div class="links">
                         <ul>
                             <li><a href="./index.html">Home</a></li>
-                            <li><a href="asset/Resume2022.pdf">Resume</a></li>
+                            <li><a href="./resume.html">Resume</a></li>
                             <li><a href="./work.html">Portfolio</a></li>
-                            <li><a href="www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a></li>
+                            <li><a href="https://www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a></li>
                             <li><a href="mailto:travis@travesto.design">Email Me</a></li>
                         </ul>
                     </div>
@@ -83,8 +83,8 @@
                             <p class="portfolioText">While the designed solution has only been in production a short time, our business partners have noted a marked increase in completion rate coinciding with a decrease in calls to adjusters requesting help completing the flow.
                             </p>
                         </div>
-                        <button class="gridButton">
-                            <a href="https://eagle.invisionapp.com/share/N6EJYBNMGKW">View Design on inVision</a>
+                        <button onclick="location.href='https://eagle.invisionapp.com/share/N6EJYBNMGKW'" class="gridButton">
+                            View Design on inVision
                         </button>
                     </div>
                     
