--- a/repairmanager.html
+++ b/repairmanager.html
@@ -42,18 +42,18 @@
                         <button class="dropbtn">Menu</button>
                         <div class="dropdown-content">
                             <a href="./index.html">Home</a>
-                            <a href="asset/Resume2022.pdf">Resume</a>
+                            <a href="./resume.html">Resume</a>
                             <a href="./work.html">Portfolio</a>
-                            <a href="www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a>
+                            <a href="https://www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a>
                             <a href="mailto:travis@travesto.design">Email Me</a>
                         </div>
                     </div>  
                     <div class="links">
                         <ul>
                             <li><a href="./index.html">Home</a></li>
-                            <li><a href="asset/Resume2022.pdf">Resume</a></li>
+                            <li><a href="./resume.html">Resume</a></li>
                             <li><a href="./work.html">Portfolio</a></li>
-                            <li><a href="www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a></li>
+                            <li><a href="https://www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a></li>
                             <li><a href="mailto:travis@travesto.design">Email Me</a></li>
                         </ul>
                     </div>
@@ -79,8 +79,8 @@
                             <p class="portfolioText">After many rounds of critique and design, business injects, and development constraints, I was able to create a simple form flow that guides the customer through the initial phase of the claim process and puts them on track to getting back to normal. 
                             </p>
                         </div>
-                        <button class="gridButton">
-                            <a href="https://eagle.invisionapp.com/share/QTEJYBQYSK3/">View Design on inVision</a>
+                        <button onclick="location.href='https://eagle.invisionapp.com/share/QTEJYBQYSK3/'" class="gridButton">
+                            View Design on inVision
                         </button>
                     </div>
                     
