--- a/work.html
+++ b/work.html
@@ -42,7 +42,7 @@
                         <button class="dropbtn">Menu</button>
                         <div class="dropdown-content">
                             <a href="./index.html">Home</a>
-                            <a href="asset/Resume2022.pdf">Resume</a>
+                            <a href="./resume.html">Resume</a>
                             <a href="./work.html">Portfolio</a>
                             <a href="https://www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a>
                             <a href="mailto:travis@travesto.design">Email Me</a>
@@ -51,7 +51,7 @@
                     <div class="links">
                         <ul>
                             <li><a href="./index.html">Home</a></li>
-                            <li><a href="asset/Resume2022.pdf">Resume</a></li>
+                            <li><a href="./resume.html">Resume</a></li>
                             <li><a href="./work.html">Portfolio</a></li>
                             <li><a href="https://www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a></li>
                             <li><a href="mailto:travis@travesto.design">Email Me</a></li>
@@ -70,7 +70,7 @@
                             <div>Enabling customers to create an estimate for auto repairs without needing to schedule an appointment with an adjuster.</div>
                         </div>
                         <button onclick="location.href='./photoest.html'" class="gridButton">
-                            <a href="./photoest.html">View Project</a>
+                            View Project
                         </button>
                     </div>
                 </div>
@@ -81,7 +81,7 @@
                             <div>Rather than waiting for an adjuster to call and arrange emergency serices, we empower customers to get the services they need proactively.</div>
                         </div>
                         <button onclick="location.href='./repairmanager.html'" class="gridButton">
-                            <a href="./repairmanager.html">View Project</a>
+                            View Project
                         </button>
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                             </div>
                         </div>
                         <button onclick="location.href='./contents.html'" class="gridButton">
-                            <a href="./contents.html">View Project</a>
+                            View Project
                         </button>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                             <div>Hands-on research led to revisinsioning the auto glass claims experience.</div>
                         </div>
                         <button onclick="location.href='./glass.html'"class="gridButton">
-                            <a href="./glass.html">View Project</a>
+                            View Project
                         </button>
                     </div>
                 </div>
@@ -116,7 +116,7 @@
                             <div>A refreshed design to help customers understand how Roadside Assistance can help them.</div>
                         </div>
                         <button onclick="location.href='./roadside.html'"class="gridButton">
-                            <a href="./roadside.html">View Project</a>
+                            View Project
                         </button>
                     </div>
                 </div>
