--- a/contents.html
+++ b/contents.html
@@ -42,18 +42,18 @@
                         <button class="dropbtn">Menu</button>
                         <div class="dropdown-content">
                             <a href="./index.html">Home</a>
-                            <a href="asset/Resume2022.pdf">Resume</a>
+                            <a href="./resume.html">Resume</a>
                             <a href="./work.html">Portfolio</a>
-                            <a href="www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a>
+                            <a href="https://www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a>
                             <a href="mailto:travis@travesto.design">Email Me</a>
                         </div>
                     </div>  
                     <div class="links">
                         <ul>
                             <li><a href="./index.html">Home</a></li>
-                            <li><a href="asset/Resume2022.pdf">Resume</a></li>
+                            <li><a href="./resume.html">Resume</a></li>
                             <li><a href="./work.html">Portfolio</a></li>
-                            <li><a href="www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a></li>
+                            <li><a href="https://www.linkedin.com/in/travis-cook-uxmc/">LinkedIn</a></li>
                             <li><a href="mailto:travis@travesto.design">Email Me</a></li>
                         </ul>
                     </div>
@@ -78,8 +78,8 @@
                             <p class="portfolioText">Testing showed this design performs favorably, meets customer expectations and business requirements. During a theft it may be difficult to know immediately what was affected, the simplistic form design allows customers to quickly enter their items and return later if needed.
                             </p>
                         </div>
-                        <button class="gridButton">
-                            <a href="https://eagle.invisionapp.com/share/N8EJYBKG4VT">View Design on inVision</a>
+                        <button onclick="location.href='https://eagle.invisionapp.com/share/N8EJYBKG4VT'" class="gridButton">
+                            View Design on inVision
                         </button>
                     </div>
                     
